  {{DISPLAYTITLE}}
* (bug 24045) MediaWiki:Ipb-needreblock is now wrapped in a div with class
  "mw-ipb-needreblock"
* (bug 24313) The preference to mark edits minor by default was removed,
  because it encourages edits to be marked minor accidentally and it can be
  easily replicated by custom user scripts for those who really want it.

=== Bug fixes in 1.17 ===
* (bug 17560) Half-broken deletion moved image files to deletion archive
  without updating database.
* (bug 22666) Submitting user block form with an invalid user name no longer
  throws an error.
* (bug 22665, bug 22667) User '0' can now be unblocked and have its block
  settings changed.
* (bug 22606) The body of e-mail address confirmation message is now different
  when the address changed.
* (bug 22664) Special:Userrights now accepts '0' as a valid user name.
* (bug 5210)  Preload parser now parses <noinclude>, <includeonly> and redirects.
* (bug 22709) IIS7 mishandles redirects generated by OutputPage::output() when
  the URL contains a colon.
* (bug 22353) Categorised recent changes now works again.
* (bug 22747) "Reveal my e-mail address in notification e-mails" preference is
  now only displayed when relevant.
* (bug 22772) {{#special:}} parser function now works with subpages.
* (bug 18664) Relative URIs in interwiki links cause failed redirects.
* (bug 19270) Relative URIs in interwiki links break interwiki transclusion.
* (bug 22903) Revdelete log entries now show in the user preferred language.
* (bug 22905) Correctly handle <abbr> followed by ISBN.
* (bug 22940) Namespace aliases pointing to main namespace don't work.
* (bug 15810) Blocked admins can no longer block/unblock other users.
* (bug 22876) Avoid possible PHP Notice if $wgDefaultUserOptions is not
  correctly set.
* (bug 14952) Page titles are renormalized after html entities are removed so
  that links with non-NFC character references work correctly.
* (bug 22991) wgUserGroups JavaScript variable now reports * group for